Created sales and session history
